@@ -45,7 +45,6 @@ export default class TimestampEditorModal extends PureComponent {
 
   render() {
     const { timestamp, onClose } = this.props;
-    console.log('timestamp = ', timestamp.toJS());
 
     return (
       <Popup shouldIncludeCloseButton onClose={onClose}>
